--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,6 +14,8 @@ jobs:
         with:
           python-version: 'pypy3.10'
 
+      - run: pypy3 -m pip install -r requirements.txt
+
       - name: Build
         run: ./compile.py
 
